[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Control.gd" type="Script" id=1]
[ext_resource path="res://Scence/Button.tres" type="Theme" id=2]

[node name="Selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_btn" type="Button" parent="."]
margin_right = 48.0
margin_bottom = 28.0
theme = ExtResource( 2 )
text = "Yes "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_btn" type="Button" parent="."]
margin_left = 160.0
margin_right = 208.0
margin_bottom = 28.0
theme = ExtResource( 2 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="yes_btn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="no_btn" to="." method="_on_no_btn_pressed"]
